# Gliding-Ops

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CopyrightNotice.cpp  CopyrightNotice.hpp  INSTALLATION  README.md
LogKeeper/: .gitignore
LogKeeper/Arduino/src/: Controller.cpp  Controller.hpp  Controller.test.cpp
LogKeeper/Experimental/: Net.cpp  createaircraftfiles  looper  nambibia-curl  read-kiss-json.py  result  ynrg-curl
LogKeeper/Experimental/APRS/: APRS-client.py  APRS-client.sh  filters.txt
LogKeeper/Pi/: .gitignore  Logkeeper-create.sql  vm  vm.2019-04-08-raspbian-stretch-lite-roroot  vm.flarm.sdb2
LogKeeper/Pi/boot/: cmdline.txt  config.txt
LogKeeper/Pi/lib/: user-config.jam
LogKeeper/Pi/src/: Controller.cpp  Controller.hpp  Controller.test.py
LogKeeper/Pi/tools/: backup4update  restore4update
LogKeeper/PreambleProcessing/APRS/: APRS-catid.py  APRS-catid.sh  APRS-client.py  APRS-client.sh  APRS-dict.py  APRS-dict.sh  APRS-evaluation.py  APRS-evaluation.sh  APRS-extract.py  APRS-extract.sh  APRS-killer.sh  APRS-logger.sh  APRS-plot.py  APRS-plot.sh  APRS-plot2d.py  APRS-plot2d.sh  APRS-plot3d.py  APRS-plot3d.sh  APRS-track.py  APRS-track.sh  aircraft.txt  filters.txt
LogKeeper/Workstation/: Compiler.h
LogKeeper/Workstation/Computer/: FlyingComputer.cpp  FlyingComputer.hpp  FlyingComputerMain.cpp  FlyingState.cpp  FlyingState.hpp  Info.cpp  Info.hpp  StateClock.hpp  Validity.hpp
LogKeeper/Workstation/Geo/: FAISphere.hpp  GeoPoint.cpp  GeoPoint.hpp  GeoVector.cpp  Math.cpp  (+5 more)
LogKeeper/doc/: .gitignore
LogKeeper/src/: Logkeeper.mwb
(+57 files in other folders)
